browser/scss/about.scss
/*About Page
========================*/

$header-height: 65px;
$footer-height: 40px;

/*Colors
========================*/
$aqua: #7FFFD4;
$cyan: #E0FFFF;
$cream: #F5FFFA;
$pastelBlue: #33CCFF;
$pastelOrange: lightsalmon;
$pastelPurple: #C688E8;
$pastelRed: #FF807D;
$pastelPink: #FF8EB2;
$darkGray: rgb(45,45,45);


/*Page Styles
========================*/

#about {
	height: calc(100vh - $footer-height);

	background-image: url("steve-pic-2.jpg");
	background-repeat: no-repeat;
	background-size: cover;
	background-position: 30%;

	#about-me {
		float: left;
		width: 40%;
		height: 100vh;
		padding: 20px 40px;
		letter-spacing: .01em;
		background-color: white;
		opacity: .5;

		h1, p, a {
			color: black;
			text-align: justify;
		}
		h1 {
			margin-bottom: 30px;
		}
		p {
			font-size: 20px;
			line-height: 150%;
			display: block;
			margin-top: 0px;
		}
		a {
			font-weight:bold;
		}
	}
	#skills-cloud{
		float: right;
		width: 60%;
		h1 {
			position: absolute;
			right: 0;
			border-bottom: solid 2px rgb(50,50,50);
			border-left: solid 2px rgb(50,50,50);
			color: rgb(50,50,50);
			padding: 20px;
			margin-right: 20px;
			margin-left: 40px;
			transition: all .5s ease;
		}
		svg {
			padding-top: 65%;
			width: 100%;
			height: 87vh;
		}
		&:hover {
			h1 {
				border-bottom: solid 2px $cream;
				border-left: solid 2px $cream;
				color: $cream;
			}
		}
	}
	#skills-mobile {
		display: none;
	}
}

/*Media Queries
=============================*/

@media (max-width: 1074px){
	body {
		// overflow: auto;
		overflow-y: scroll;
		-webkit-overflow-scrolling: touch;
	}
	#about {
		height: 55vh;
		background-position: bottom;

		#skills-cloud {
			display: none;
		}
		#skills-mobile {
			// background-image: url('bgnoise.jpg');
			width: 100%;
			padding: 10px;
			display: block;
			margin-bottom: 70px;

			h1 {
				font-size: 36px;
				margin-top: 0px;
				margin-left: 3%;
				color: $cream;
			}
			#skill-list {
				display: flex;
				justify-content: space-around;
				flex-flow: wrap;
				width: 90%;
				margin: auto;
				.skill-circle {
					// display: inline-block;
					width: 80px;
					height: 80px;
					border-radius: 100px;
					padding-top: 30px;
					text-align: center;
					// background-color: $aqua;
					margin: 5px;
					font-family: "Oxygen", sans-serif;
					font-size: 13px;
				}
			}
		}
		#about-me {
			float: none !important;
			width: 100%;
			height: 100%;
		}
	}
}

@media (max-width: 768px){
	#about {
		background-image: none;
		height: 100%;
		#about-me {
			height: 100%;
			background-image: url('steve-pic-2.jpg');
			background-position: bottom;
			background-size: cover;
			opacity: .8;
			padding: 0px;
			#overlay-mobile {
				background-color: rgba(255,255,255,.5);
				padding: 5%;
				margin-bottom: 0px;
			}
		}
	}
}

